# nuitka-build

./: README.md  myapp.py  pyproject.toml  requirements.txt
.github/workflows/: build-osx-package.yml
osx/: component.plist
