[tool.poetry]
name = "nuitka-build"
version = "0.1.0"
description = ""
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
readme = "README.md"
packages = [{include = "nuitka_build"}]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
Nuitka = "^1.0.6"
PySide6 = "^6.3.1"
imageio = "^2.21.2"
ordered-set = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
